--- a/src/css/main.css
+++ b/src/css/main.css
@@ -763,10 +763,24 @@ Blog
   box-shadow: var(--dark-shadow);
   transform: scale(1.02);
 }
-.blog article {
+.blog-article {
   height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
+}
+.blog-text {
+  height: 100%;
+  width: 60%;
+  font-size: large;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 5%;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  line-height: 3;
+  grid-column: 6 / -1;
 }
 .blog-card {
   display: grid;
@@ -894,7 +908,7 @@ About Page
 }
 .about-img {
   margin-bottom: 2rem;
-  height: 25rem;
+  height: 30rem;
 }
 .about-text .section-title {
   margin-bottom: 2rem;
